# sisvida

./: .env  capacitor.config.ts  index.html  package-lock.json  package.json  tailwind.config.ts  vercel.json  vite.config.ts
.lovable/: plan.md
docs/: AUDITORIA_SESSAO_DEFINITIVA.md  FLUXO_INICIALIZACAO_CORRIGIDO.md  PUSH_NOTIFICATION_AUDIT.md  SESSION_PERSISTENCE.md
public/: 404.html  _redirects  firebase-messaging-sw.js  manifest-sindicato.webmanifest  manifest.webmanifest
public/docs/: ESTRUTURA_TABELAS.txt  IMPORTACAO_MANUAL.txt
public/imports/: socios_empresas_parsed.md
public/s/: index.html
public/sindicato/: index.html
public/tools/: database-exporter.html
src/: App.tsx  index.css  main.tsx  mobileBootstrap.ts
src-tauri/: Cargo.toml  tauri.conf.json
src/components/: BlockedClinicOverlay.tsx  MaintenanceBanner.tsx  MaintenanceClinicOverlay.tsx
src/constants/: sindicato.ts
src/contexts/: MobileAuthContext.tsx  ModalContext.tsx  SystemModalContext.tsx
src/hooks/: use-mobile.tsx  useAppAvailability.ts  useAuditLog.ts  useAuth.tsx  useAuthAudit.ts  useAutoSave.ts  useAvailableYears.ts  useCarouselBanners.ts  useCepLookup.ts  useChatAttachment.ts  useChatAvailability.ts  useChatConversation.ts  useClinicAddons.ts  useClinicBookingWindowEndDate.ts  useClinicHasUnionEntity.ts  useCnpjLookup.ts  useContributionsReport.ts  useCountUp.ts  useDocumentSettings.ts  useDynamicFavicon.ts  useDynamicPWA.test.ts  useDynamicPWA.ts  useHeroSettings.ts  useHidePendingDate.ts  (+37 more)
supabase/: config.toml
tmp/: modelo_completo_pacientes_30122025_v2.xlsx
(+1216 files in other folders)
