[package]
name = "secmi"
version = "1.0.0"
description = "SECMI - Aplicativo do Sindicato"
authors = ["SECMI"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = ["shell-open-api", "window-all", "custom-protocol"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
