[package]
name = "eclini"
version = "1.0.0"
description = "Eclini - Sistema de Gestão"
authors = ["Tecmax"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = ["shell-open-api", "window-all"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
custom-protocol = ["tauri/custom-protocol"]
